--- a/anphys/engine/engine.vcxproj
+++ b/anphys/engine/engine.vcxproj
@@ -77,74 +77,79 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\engine\scene\graphics_object_component.h" />
+    <ClInclude Include="..\src\engine\frame_system\render_frame.h" />
+    <ClInclude Include="..\src\engine\frame_system\win32_framesystem\application.h" />
+    <ClInclude Include="..\src\engine\frame_system\win32_framesystem\simple_window.h" />
+    <ClInclude Include="..\src\engine\frame_system\win32_framesystem\windows_manager.h" />
+    <ClInclude Include="..\src\engine\frame_system\win32_render_frame\render_frame_win32_window.h" />
+    <ClInclude Include="..\src\engine\scene\components\graphics_object_component.h" />
+    <ClInclude Include="..\src\engine\scene\components\physics_rigid_body_object_component.h" />
+    <ClInclude Include="..\src\engine\scene\components\physics_static_body_object_component.h" />
+    <ClInclude Include="..\src\engine\scene\components\render3d_object_component.h" />
     <ClInclude Include="..\src\engine\scene\object.h" />
     <ClInclude Include="..\src\engine\scene\object_component.h" />
-    <ClInclude Include="..\src\engine\scene\physics_rigid_body_object_component.h" />
-    <ClInclude Include="..\src\engine\scene\physics_static_body_object_component.h" />
-    <ClInclude Include="..\src\engine\scene\render3d_object_component.h" />
     <ClInclude Include="..\src\engine\scene\scene.h" />
     <ClInclude Include="..\src\engine\scene\scene_stuff.h" />
-    <ClInclude Include="..\src\physics\box_box_cd.h" />
-    <ClInclude Include="..\src\physics\box_collision_geometry.h" />
-    <ClInclude Include="..\src\physics\cd_stuff.h" />
-    <ClInclude Include="..\src\physics\collision.h" />
-    <ClInclude Include="..\src\physics\collision_geometry.h" />
-    <ClInclude Include="..\src\physics\collision_geometry_part.h" />
-    <ClInclude Include="..\src\physics\collision_manager.h" />
-    <ClInclude Include="..\src\physics\collision_point.h" />
-    <ClInclude Include="..\src\physics\inertia.h" />
+    <ClInclude Include="..\src\physics\CD\collision_detection\box_box_cd.h" />
+    <ClInclude Include="..\src\physics\CD\collision_detection\cd_stuff.h" />
+    <ClInclude Include="..\src\physics\CD\collision_detection\support_geom.h" />
+    <ClInclude Include="..\src\physics\CD\collision_geometry\box_collision_geometry.h" />
+    <ClInclude Include="..\src\physics\CD\collision_geometry\collision.h" />
+    <ClInclude Include="..\src\physics\CD\collision_geometry\collision_geometry.h" />
+    <ClInclude Include="..\src\physics\CD\collision_geometry\collision_geometry_part.h" />
+    <ClInclude Include="..\src\physics\CD\collision_geometry\collision_point.h" />
+    <ClInclude Include="..\src\physics\CD\collision_manager.h" />
+    <ClInclude Include="..\src\physics\objects\physics_object.h" />
+    <ClInclude Include="..\src\physics\objects\rigid_object.h" />
+    <ClInclude Include="..\src\physics\objects\static_object.h" />
     <ClInclude Include="..\src\physics\physics_engine.h" />
-    <ClInclude Include="..\src\physics\physics_object.h" />
-    <ClInclude Include="..\src\physics\physics_scene.h" />
-    <ClInclude Include="..\src\physics\rigid_object.h" />
-    <ClInclude Include="..\src\physics\sequential_impulses_solver.h" />
-    <ClInclude Include="..\src\physics\solver_interface.h" />
-    <ClInclude Include="..\src\physics\static_object.h" />
-    <ClInclude Include="..\src\physics\support_geom.h" />
-    <ClInclude Include="..\src\render\camera.h" />
-    <ClInclude Include="..\src\render\cameras_manager.h" />
-    <ClInclude Include="..\src\render\camera_3d_mouse.h" />
-    <ClInclude Include="..\src\render\d3d8\camera.h" />
-    <ClInclude Include="..\src\render\d3d8\light_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\material_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\mesh_data_manager_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\mesh_part_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\object_manager_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\render_3d_object_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\render_3d_object_mesh_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\render_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\surface_material_d3d8.h" />
-    <ClInclude Include="..\src\render\d3d8\texture_d3d8.h" />
-    <ClInclude Include="..\src\render\light.h" />
-    <ClInclude Include="..\src\render\light_base_interface.h" />
-    <ClInclude Include="..\src\render\light_manager.h" />
-    <ClInclude Include="..\src\render\material.h" />
-    <ClInclude Include="..\src\render\material_base_interface.h" />
-    <ClInclude Include="..\src\render\material_manager.h" />
-    <ClInclude Include="..\src\render\mesh_part.h" />
-    <ClInclude Include="..\src\render\mesh_part_base_interface.h" />
-    <ClInclude Include="..\src\render\multi_3d_object_container.h" />
-    <ClInclude Include="..\src\render\multi_object.h" />
-    <ClInclude Include="..\src\render\multi_object_container.h" />
-    <ClInclude Include="..\src\render\object_manager.h" />
-    <ClInclude Include="..\src\render\object_manager_base_interface.h" />
+    <ClInclude Include="..\src\physics\scenes\physics_scene.h" />
+    <ClInclude Include="..\src\physics\solver\sequential_impulses_solver.h" />
+    <ClInclude Include="..\src\physics\solver\solver_interface.h" />
+    <ClInclude Include="..\src\physics\stuff\inertia.h" />
+    <ClInclude Include="..\src\render\camera\camera.h" />
+    <ClInclude Include="..\src\render\camera\cameras_manager.h" />
+    <ClInclude Include="..\src\render\camera\camera_3d_mouse.h" />
+    <ClInclude Include="..\src\render\light_manager\light.h" />
+    <ClInclude Include="..\src\render\light_manager\light_base_interface.h" />
+    <ClInclude Include="..\src\render\light_manager\light_manager.h" />
+    <ClInclude Include="..\src\render\material_manager\material.h" />
+    <ClInclude Include="..\src\render\material_manager\material_base_interface.h" />
+    <ClInclude Include="..\src\render\material_manager\material_manager.h" />
     <ClInclude Include="..\src\render\render.h" />
-    <ClInclude Include="..\src\render\render_3d_object.h" />
-    <ClInclude Include="..\src\render\render_3d_object_base_interface.h" />
-    <ClInclude Include="..\src\render\render_3d_object_mesh.h" />
-    <ClInclude Include="..\src\render\render_3d_object_mesh_base_interface.h" />
     <ClInclude Include="..\src\render\render_base_interface.h" />
-    <ClInclude Include="..\src\render\render_object.h" />
-    <ClInclude Include="..\src\render\render_object_base_interface.h" />
-    <ClInclude Include="..\src\render\render_scene_base_interface.h" />
-    <ClInclude Include="..\src\render\scene_manager.h" />
-    <ClInclude Include="..\src\render\surface_material.h" />
-    <ClInclude Include="..\src\render\surface_material_base_interface.h" />
-    <ClInclude Include="..\src\render\surface_material_manager.h" />
-    <ClInclude Include="..\src\render\texture.h" />
-    <ClInclude Include="..\src\render\texture_base_interface.h" />
-    <ClInclude Include="..\src\render\texture_manager.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\mesh\mesh_part.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\mesh\mesh_part_base_interface.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\mesh\render_3d_object_mesh.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\mesh\render_3d_object_mesh_base_interface.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\render_3d_object.h" />
+    <ClInclude Include="..\src\render\render_objects\3d\render_3d_object_base_interface.h" />
+    <ClInclude Include="..\src\render\render_objects\multi_object\multi_3d_object_container.h" />
+    <ClInclude Include="..\src\render\render_objects\multi_object\multi_object.h" />
+    <ClInclude Include="..\src\render\render_objects\multi_object\multi_object_container.h" />
+    <ClInclude Include="..\src\render\render_objects\object_manager.h" />
+    <ClInclude Include="..\src\render\render_objects\object_manager_base_interface.h" />
+    <ClInclude Include="..\src\render\render_objects\render_object.h" />
+    <ClInclude Include="..\src\render\render_objects\render_object_base_interface.h" />
+    <ClInclude Include="..\src\render\scenes\scene_manager.h" />
+    <ClInclude Include="..\src\render\scenes\simple_scene\render_scene_base_interface.h" />
+    <ClInclude Include="..\src\render\surface\surface_material.h" />
+    <ClInclude Include="..\src\render\surface\surface_material_base_interface.h" />
+    <ClInclude Include="..\src\render\surface\surface_material_manager.h" />
+    <ClInclude Include="..\src\render\texture_manager\texture.h" />
+    <ClInclude Include="..\src\render\texture_manager\texture_base_interface.h" />
+    <ClInclude Include="..\src\render\texture_manager\texture_manager.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\camera\camera.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\light\light_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\material\material_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_data_manager_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_part_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\render_3d_object_mesh_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\object_manager_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\render_3d_object_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\render_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\surface\surface_material_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\texture\texture_d3d8.h" />
     <ClInclude Include="..\src\util\debug\render_stuff.h" />
     <ClInclude Include="..\src\util\file_system\file_base_interface.h" />
     <ClInclude Include="..\src\util\other\data_object.h" />
@@ -182,60 +187,60 @@
     <ClInclude Include="..\src\util\input\input_keys.h" />
     <ClInclude Include="..\src\util\debug\assert.h" />
     <ClInclude Include="..\src\util\geometry\geometry_objects.h" />
-    <ClInclude Include="..\src\engine\render_system\render_frame.h" />
-    <ClInclude Include="..\src\engine\render_system\render_frame_win32_window\render_frame_win32_window.h" />
     <ClInclude Include="..\src\engine\engine.h" />
     <ClInclude Include="..\src\engine\engine_incl.h" />
     <ClInclude Include="..\src\engine\engine_options.h" />
-    <ClInclude Include="..\src\win32_platform\application.h" />
-    <ClInclude Include="..\src\win32_platform\simple_window.h" />
-    <ClInclude Include="..\src\win32_platform\windows_manager.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\engine\render_system\render_frame.cpp" />
-    <ClCompile Include="..\src\engine\scene\graphics_object_component.cpp" />
+    <ClCompile Include="..\src\engine\frame_system\render_frame.cpp" />
+    <ClCompile Include="..\src\engine\frame_system\win32_framesystem\application.cpp" />
+    <ClCompile Include="..\src\engine\frame_system\win32_framesystem\simple_window.cpp" />
+    <ClCompile Include="..\src\engine\frame_system\win32_framesystem\windows_manager.cpp" />
+    <ClCompile Include="..\src\engine\frame_system\win32_render_frame\render_frame_win32_window.cpp" />
+    <ClCompile Include="..\src\engine\scene\components\graphics_object_component.cpp" />
+    <ClCompile Include="..\src\engine\scene\components\physics_rigid_body_object_component.cpp" />
+    <ClCompile Include="..\src\engine\scene\components\physics_static_body_object_component.cpp" />
+    <ClCompile Include="..\src\engine\scene\components\render3d_object_component.cpp" />
     <ClCompile Include="..\src\engine\scene\object.cpp" />
-    <ClCompile Include="..\src\engine\scene\physics_rigid_body_object_component.cpp" />
-    <ClCompile Include="..\src\engine\scene\physics_static_body_object_component.cpp" />
-    <ClCompile Include="..\src\engine\scene\render3d_object_component.cpp" />
     <ClCompile Include="..\src\engine\scene\scene.cpp" />
     <ClCompile Include="..\src\engine\scene\scene_stuff.cpp" />
-    <ClCompile Include="..\src\physics\box_box_cd.cpp" />
-    <ClCompile Include="..\src\physics\box_collision_geometry.cpp" />
-    <ClCompile Include="..\src\physics\cd_stuff.cpp" />
-    <ClCompile Include="..\src\physics\collision.cpp" />
-    <ClCompile Include="..\src\physics\collision_geometry.cpp" />
-    <ClCompile Include="..\src\physics\collision_manager.cpp" />
-    <ClCompile Include="..\src\physics\inertia.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_detection\box_box_cd.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_detection\cd_stuff.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_detection\support_geom.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_geometry\box_collision_geometry.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_geometry\collision.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_geometry\collision_geometry.cpp" />
+    <ClCompile Include="..\src\physics\CD\collision_manager.cpp" />
+    <ClCompile Include="..\src\physics\objects\rigid_object.cpp" />
+    <ClCompile Include="..\src\physics\objects\static_object.cpp" />
     <ClCompile Include="..\src\physics\physics_engine.cpp" />
-    <ClCompile Include="..\src\physics\physics_scene.cpp" />
-    <ClCompile Include="..\src\physics\rigid_object.cpp" />
-    <ClCompile Include="..\src\physics\sequential_impulses_solver.cpp" />
-    <ClCompile Include="..\src\physics\static_object.cpp" />
-    <ClCompile Include="..\src\physics\support_geom.cpp" />
-    <ClCompile Include="..\src\render\cameras_manager.cpp" />
-    <ClCompile Include="..\src\render\camera_3d_mouse.cpp" />
-    <ClCompile Include="..\src\render\d3d8\camera_3d_mouse_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\light_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\material_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\mesh_data_manager_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\mesh_part_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\render_3d_object_mesh_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\render_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\surface_material_d3d8.cpp" />
-    <ClCompile Include="..\src\render\d3d8\texture_d3d8.cpp" />
-    <ClCompile Include="..\src\render\light_manager.cpp" />
-    <ClCompile Include="..\src\render\material_manager.cpp" />
-    <ClCompile Include="..\src\render\multi_object.cpp" />
-    <ClCompile Include="..\src\render\object_manager_base_interface.cpp" />
+    <ClCompile Include="..\src\physics\scenes\physics_scene.cpp" />
+    <ClCompile Include="..\src\physics\solver\sequential_impulses_solver.cpp" />
+    <ClCompile Include="..\src\physics\stuff\inertia.cpp" />
+    <ClCompile Include="..\src\render\camera\cameras_manager.cpp" />
+    <ClCompile Include="..\src\render\camera\camera_3d_mouse.cpp" />
+    <ClCompile Include="..\src\render\light_manager\light_manager.cpp" />
+    <ClCompile Include="..\src\render\material_manager\material_manager.cpp" />
     <ClCompile Include="..\src\render\render.cpp" />
     <ClCompile Include="..\src\render\render_base_interface.cpp" />
-    <ClCompile Include="..\src\render\render_object.cpp" />
-    <ClCompile Include="..\src\render\render_scene_base_interface.cpp" />
-    <ClCompile Include="..\src\render\scene_manager.cpp" />
-    <ClCompile Include="..\src\render\surface_material_base_interface.cpp" />
-    <ClCompile Include="..\src\render\surface_material_manager.cpp" />
-    <ClCompile Include="..\src\render\texture_manager.cpp" />
+    <ClCompile Include="..\src\render\render_objects\multi_object\multi_object.cpp" />
+    <ClCompile Include="..\src\render\render_objects\object_manager_base_interface.cpp" />
+    <ClCompile Include="..\src\render\render_objects\render_object.cpp" />
+    <ClCompile Include="..\src\render\render_objects\render_object_base_interface.cpp" />
+    <ClCompile Include="..\src\render\scenes\scene_manager.cpp" />
+    <ClCompile Include="..\src\render\scenes\simple_scene\render_scene_base_interface.cpp" />
+    <ClCompile Include="..\src\render\surface\surface_material_base_interface.cpp" />
+    <ClCompile Include="..\src\render\surface\surface_material_manager.cpp" />
+    <ClCompile Include="..\src\render\texture_manager\texture_manager.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\camera\camera_3d_mouse_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\light\light_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\material\material_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_data_manager_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_part_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\render_3d_object_mesh_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\render_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\surface\surface_material_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\texture\texture_d3d8.cpp" />
     <ClCompile Include="..\src\util\debug\render_stuff.cpp" />
     <ClCompile Include="..\src\util\file_system\file.cpp" />
     <ClCompile Include="..\src\util\math\ray.cpp" />
@@ -246,17 +251,12 @@
     <ClCompile Include="..\src\util\file_system\file_win.cpp" />
     <ClCompile Include="..\src\util\debug\assert.cpp" />
     <ClCompile Include="..\src\util\geometry\geometry_objects.cpp" />
-    <ClCompile Include="..\src\engine\render_system\render_frame_win32_window\render_frame_win32_window.cpp" />
     <ClCompile Include="..\src\engine\engine.cpp" />
     <ClCompile Include="..\src\engine\engine_win.cpp" />
     <ClCompile Include="..\src\util\other\type_indexation.cpp" />
     <ClCompile Include="..\src\util\script\config_reader.cpp" />
-    <ClCompile Include="..\src\win32_platform\application.cpp" />
-    <ClCompile Include="..\src\win32_platform\simple_window.cpp" />
-    <ClCompile Include="..\src\win32_platform\windows_manager.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
     <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
