--- a/trunk/anphys/engine/engine.vcxproj
+++ b/trunk/anphys/engine/engine.vcxproj
@@ -108,8 +108,11 @@
     <ClInclude Include="..\src\physics\solver\sequential_impulses_solver.h" />
     <ClInclude Include="..\src\physics\solver\solver_interface.h" />
     <ClInclude Include="..\src\physics\stuff\inertia.h" />
+    <ClInclude Include="..\src\render\2d_render\render_2d.h" />
+    <ClInclude Include="..\src\render\2d_render\render_2d_base_interface.h" />
     <ClInclude Include="..\src\render\camera\camera.h" />
     <ClInclude Include="..\src\render\camera\cameras_manager.h" />
+    <ClInclude Include="..\src\render\camera\camera_2d.h" />
     <ClInclude Include="..\src\render\camera\camera_3d_mouse.h" />
     <ClInclude Include="..\src\render\light_manager\light.h" />
     <ClInclude Include="..\src\render\light_manager\light_base_interface.h" />
@@ -119,7 +122,8 @@
     <ClInclude Include="..\src\render\material_manager\material_manager.h" />
     <ClInclude Include="..\src\render\render.h" />
     <ClInclude Include="..\src\render\render_base_interface.h" />
-    <ClInclude Include="..\src\render\render_objects\2d\render_2d_object_mesh  .h" />
+    <ClInclude Include="..\src\render\render_objects\2d\render_2d_object_mesh.h" />
+    <ClInclude Include="..\src\render\render_objects\2d\render_2d_object_mesh_base_interface.h" />
     <ClInclude Include="..\src\render\render_objects\3d\mesh\mesh_part.h" />
     <ClInclude Include="..\src\render\render_objects\3d\mesh\mesh_part_base_interface.h" />
     <ClInclude Include="..\src\render\render_objects\3d\mesh\render_3d_object_mesh.h" />
@@ -141,9 +145,10 @@
     <ClInclude Include="..\src\render\texture_manager\texture.h" />
     <ClInclude Include="..\src\render\texture_manager\texture_base_interface.h" />
     <ClInclude Include="..\src\render\texture_manager\texture_manager.h" />
-    <ClInclude Include="..\src\spec_render\render_d3d8\camera\camera.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\light\light_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\material\material_d3d8.h" />
+    <ClInclude Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_data_manager_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_part_d3d8.h" />
     <ClInclude Include="..\src\spec_render\render_d3d8\objects\mesh\render_3d_object_mesh_d3d8.h" />
@@ -154,6 +159,7 @@
     <ClInclude Include="..\src\spec_render\render_d3d8\texture\texture_d3d8.h" />
     <ClInclude Include="..\src\util\debug\render_stuff.h" />
     <ClInclude Include="..\src\util\file_system\file_base_interface.h" />
+    <ClInclude Include="..\src\util\image\image.h" />
     <ClInclude Include="..\src\util\other\data_object.h" />
     <ClInclude Include="..\src\util\other\precreated_vector.h" />
     <ClInclude Include="..\src\util\other\queue.h" />
@@ -219,12 +225,16 @@
     <ClCompile Include="..\src\physics\scenes\physics_scene.cpp" />
     <ClCompile Include="..\src\physics\solver\sequential_impulses_solver.cpp" />
     <ClCompile Include="..\src\physics\stuff\inertia.cpp" />
+    <ClCompile Include="..\src\render\2d_render\render_2d_base_interface.cpp" />
+    <ClCompile Include="..\src\render\camera\camera.cpp" />
     <ClCompile Include="..\src\render\camera\cameras_manager.cpp" />
+    <ClCompile Include="..\src\render\camera\camera_2d.cpp" />
     <ClCompile Include="..\src\render\camera\camera_3d_mouse.cpp" />
     <ClCompile Include="..\src\render\light_manager\light_manager.cpp" />
     <ClCompile Include="..\src\render\material_manager\material_manager.cpp" />
     <ClCompile Include="..\src\render\render.cpp" />
     <ClCompile Include="..\src\render\render_base_interface.cpp" />
+    <ClCompile Include="..\src\render\render_objects\2d\render_2d_object_mesh_base_interface.cpp" />
     <ClCompile Include="..\src\render\render_objects\multi_object\multi_object.cpp" />
     <ClCompile Include="..\src\render\render_objects\object_manager_base_interface.cpp" />
     <ClCompile Include="..\src\render\render_objects\render_object.cpp" />
@@ -234,9 +244,11 @@
     <ClCompile Include="..\src\render\surface\surface_material_base_interface.cpp" />
     <ClCompile Include="..\src\render\surface\surface_material_manager.cpp" />
     <ClCompile Include="..\src\render\texture_manager\texture_manager.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\2d_render\render_2d_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\camera\camera_3d_mouse_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\light\light_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\material\material_d3d8.cpp" />
+    <ClCompile Include="..\src\spec_render\render_d3d8\objects\2d\render_2d_object_mesh_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_data_manager_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\mesh_part_d3d8.cpp" />
     <ClCompile Include="..\src\spec_render\render_d3d8\objects\mesh\render_3d_object_mesh_d3d8.cpp" />
@@ -245,6 +257,7 @@
     <ClCompile Include="..\src\spec_render\render_d3d8\texture\texture_d3d8.cpp" />
     <ClCompile Include="..\src\util\debug\render_stuff.cpp" />
     <ClCompile Include="..\src\util\file_system\file.cpp" />
+    <ClCompile Include="..\src\util\image\image.cpp" />
     <ClCompile Include="..\src\util\math\ray.cpp" />
     <ClCompile Include="..\src\util\other\data_object.cpp" />
     <ClCompile Include="..\src\util\other\string_utils.cpp" />
