--- a/trunk/anphys/engine/engine.vcxproj
+++ b/trunk/anphys/engine/engine.vcxproj
@@ -40,7 +40,7 @@
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(Configuration)\</IntDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(Configuration)\</IntDir>
-    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../src/dependencies/dx8/include;$(IncludePath)</IncludePath>
+    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../src/dependencies/libpng;../src/dependencies/dx8/include;../src/dependencies/zlib;$(IncludePath)</IncludePath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../src/dependencies/dx8/lib;$(LibraryPath)</LibraryPath>
     <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\src\render\d3d8\sdk\include;$(IncludePath)</IncludePath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\src\render\d3d8\sdk\lib;$(LibraryPath)</LibraryPath>
@@ -78,6 +78,23 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\dependencies\libpng\png.h" />
+    <ClInclude Include="..\src\dependencies\libpng\pngconf.h" />
+    <ClInclude Include="..\src\dependencies\zlib\crc32.h" />
+    <ClInclude Include="..\src\dependencies\zlib\crypt.h" />
+    <ClInclude Include="..\src\dependencies\zlib\deflate.h" />
+    <ClInclude Include="..\src\dependencies\zlib\inffast.h" />
+    <ClInclude Include="..\src\dependencies\zlib\inffixed.h" />
+    <ClInclude Include="..\src\dependencies\zlib\inflate.h" />
+    <ClInclude Include="..\src\dependencies\zlib\inftrees.h" />
+    <ClInclude Include="..\src\dependencies\zlib\ioapi.h" />
+    <ClInclude Include="..\src\dependencies\zlib\trees.h" />
+    <ClInclude Include="..\src\dependencies\zlib\unzip.h" />
+    <ClInclude Include="..\src\dependencies\zlib\zconf.h" />
+    <ClInclude Include="..\src\dependencies\zlib\zconf.in.h" />
+    <ClInclude Include="..\src\dependencies\zlib\zip.h" />
+    <ClInclude Include="..\src\dependencies\zlib\zlib.h" />
+    <ClInclude Include="..\src\dependencies\zlib\zutil.h" />
     <ClInclude Include="..\src\engine\frame_system\render_frame.h" />
     <ClInclude Include="..\src\engine\frame_system\win32_framesystem\application.h" />
     <ClInclude Include="..\src\engine\frame_system\win32_framesystem\simple_window.h" />
@@ -160,6 +177,7 @@
     <ClInclude Include="..\src\util\debug\render_stuff.h" />
     <ClInclude Include="..\src\util\file_system\file_base_interface.h" />
     <ClInclude Include="..\src\util\image\image.h" />
+    <ClInclude Include="..\src\util\image\png_image_format.h" />
     <ClInclude Include="..\src\util\other\data_object.h" />
     <ClInclude Include="..\src\util\other\precreated_vector.h" />
     <ClInclude Include="..\src\util\other\queue.h" />
@@ -200,6 +218,39 @@
     <ClInclude Include="..\src\engine\engine_options.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\dependencies\libpng\png.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngerror.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pnggccrd.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngget.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngmem.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngpread.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngread.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngrio.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngrtran.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngrutil.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngset.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngtest.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngtrans.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngvcrd.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngwio.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngwrite.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngwtran.c" />
+    <ClCompile Include="..\src\dependencies\libpng\pngwutil.c" />
+    <ClCompile Include="..\src\dependencies\zlib\adler32.c" />
+    <ClCompile Include="..\src\dependencies\zlib\compress.c" />
+    <ClCompile Include="..\src\dependencies\zlib\crc32.c" />
+    <ClCompile Include="..\src\dependencies\zlib\deflate.c" />
+    <ClCompile Include="..\src\dependencies\zlib\gzio.c" />
+    <ClCompile Include="..\src\dependencies\zlib\infback.c" />
+    <ClCompile Include="..\src\dependencies\zlib\inffast.c" />
+    <ClCompile Include="..\src\dependencies\zlib\inflate.c" />
+    <ClCompile Include="..\src\dependencies\zlib\inftrees.c" />
+    <ClCompile Include="..\src\dependencies\zlib\ioapi.c" />
+    <ClCompile Include="..\src\dependencies\zlib\trees.c" />
+    <ClCompile Include="..\src\dependencies\zlib\uncompr.c" />
+    <ClCompile Include="..\src\dependencies\zlib\unzip.c" />
+    <ClCompile Include="..\src\dependencies\zlib\zip.c" />
+    <ClCompile Include="..\src\dependencies\zlib\zutil.c" />
     <ClCompile Include="..\src\engine\frame_system\render_frame.cpp" />
     <ClCompile Include="..\src\engine\frame_system\win32_framesystem\application.cpp" />
     <ClCompile Include="..\src\engine\frame_system\win32_framesystem\simple_window.cpp" />
@@ -258,6 +309,7 @@
     <ClCompile Include="..\src\util\debug\render_stuff.cpp" />
     <ClCompile Include="..\src\util\file_system\file.cpp" />
     <ClCompile Include="..\src\util\image\image.cpp" />
+    <ClCompile Include="..\src\util\image\png_image_format.cpp" />
     <ClCompile Include="..\src\util\math\ray.cpp" />
     <ClCompile Include="..\src\util\other\data_object.cpp" />
     <ClCompile Include="..\src\util\other\string_utils.cpp" />
